# CineFluent

./: .coverage  .env  .gitignore  App.tsx  README.md  STAGE3_SETUP_COMPLETE.md  add_practice.sh  app.json  build_authentication.sh  clean_setup.sh  cleanup-project.sh  cleanup_and_setup.sh  complete_stage3.sh  debug_auth_issue.sh  docker-compose-simple.yml  docker-compose.yml  final_cleanup_fix.sh  fix_backend_script.sh  fix_backend_setup.sh  fix_community_screen.sh  fix_issues.sh  fix_stage3_issues.sh  fix_text_cleaner.py  package-lock.json  package.json  package.json.backup  pyproject.toml  quick_fix.sh  redis_fix_script.sh  requirements.txt  setup_auth_components.sh  setup_frontend_auth.sh  setup_stage3.sh  stage2_setup.sh  stage3_setup.sh  start-backend.sh  start-frontend.sh  start_dev.sh  start_frontend_test.sh  test_api.py  (+3 more)
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/anonymous/cinefluent/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
backend/: Dockerfile  README.md  init_db.py  pyproject.toml  requirements.txt  run_api.py  run_api_fixed.py  run_fixed_api.py  setup.py  simple_api.py  test_de.srt  test_en.srt
backend/cinefluent/learning/: routes.py
cinefluent/: database_models.py  ingest.py  ingestion_service.py  subtitle_processor.py
cinefluent.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cinefluent/api/: config.py  database.py  main.py
cinefluent/auth/: models.py  routes.py  utils.py
cinefluent/gamification/: models.py  routes.py
cinefluent/learning/: models.py  routes.py
cinefluent/movies/: routes.py
cinefluent/users/: routes.py
client/: .env  .gitignore  App.js  App.tsx  app.json  complete_stage3.sh  package-lock.json  package.json  package.json.new  test_client.js
client/src/components/audio/: AudioPlayer.tsx
client/src/components/auth/: AuthContext.js  AuthContext.tsx  LoginScreen.js  LoginScreen.tsx  RegisterScreen.js  RegisterScreen.tsx
client/src/components/progress/: StreakWidget.tsx
client/src/components/quiz/: QuizCard.tsx
client/src/components/vocabulary/: VocabCard.tsx
client/src/constants/: index.ts
client/src/contexts/: AuthContext.js
client/src/navigation/: AppNavigator.tsx  MainNavigator.tsx
client/src/screens/auth/: LoginScreen.js  RegisterScreen.js
client/src/screens/community/: CommunityScreen.tsx
client/src/screens/dashboard/: DashboardScreen.styles.ts  DashboardScreen.tsx
client/src/screens/leaderboard/: LeaderboardScreen.tsx
client/src/screens/learning/: LessonScreen.tsx
client/src/screens/lesson/: LessonScreen.tsx
client/src/screens/profile/: ProfileScreen.tsx
client/src/screens/progress/: ProgressScreen.styles.ts  ProgressScreen.tsx
client/src/screens/vocabulary/: VocabularyScreen.tsx
client/src/services/: api.ts
client/src/services/api/: client.ts
client/src/types/: index.ts
sql/: init.sql
src/constants/: index.ts
src/hooks/: useAuth.ts
src/navigation/: AppNavigator.tsx  MainNavigator.tsx
src/screens/auth/: LoginScreen.tsx
src/screens/dashboard/: DashboardScreen.tsx
src/screens/leaderboard/: LeaderboardScreen.tsx
src/screens/lesson/: LessonScreen.tsx
src/screens/profile/: ProfileScreen.tsx
src/screens/progress/: ProgressScreen.tsx
src/screens/vocabulary/: VocabularyScreen.tsx
tests/: test_stage1.py
